# rubik-opengl

./: .gitignore  CMakeLists.txt  README.md
include/: main.hpp
src/: .main.cpp.swp  Makefile  RgbImage.cpp  TP4_texturasAlunos.cpp  main  main.cpp  old.txt  particles.hpp  rubik  rubikcube.cpp  rubikcube.hpp
